fix alignment of all h1 to the center

--- a/Nueva_carpeta_SASS/scss/archivo.scss
+++ b/Nueva_carpeta_SASS/scss/archivo.scss
@@ -213,7 +213,8 @@ h1 {
 	color: hotpink;
 	text-transform: uppercase;
 	font-size: 45px;
-	margin-left: 30%;
+	margin: auto;
+	text-align: center;
 	margin-bottom: 10px;
 	font-family: Pacifico;
 }
@@ -324,11 +325,7 @@ footer {
 		}
 	}
 }
-.h1h2 {
-	h1 {
-		text-align: center;
-	}
-}
+
 h2 {
 	background-color: rgb(150, 86, 211);
 	height: 40%;
@@ -400,7 +397,6 @@ h2 {
 	margin: 10px;
 }
 .h1Secciones {
-	margin-left: 35%;
 	-webkit-text-stroke-color: rgb(85, 61, 221);
 	-webkit-text-stroke-width: 0.05rem;
 	font-family: staatliches;
@@ -504,7 +500,6 @@ ul.li {
 	}
 	h1 {
 		font-size: 30px;
-		margin-left: 10%;
 	}
 	.textoFlex {
 		display: flex;
